# model-enhancement-servers

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cc_mcp_config.json  memo.md  metagames-script.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  run.json  sequential-thinking-report.md  trace.json  tsconfig.json  ulysses-protocol-walkthrough.md
.github/workflows/: ci.yml
.wins/: log.json
agentic-scripts/: README.md  config.json
agentic-scripts/workflows/: a3.sh  build-measure-learn.sh  dmaic.sh  double-diamond.sh  gamified-learning.sh  ooda-loop.sh  pdca.sh  stage-gate.sh
demos/bass/: memo.template.md
examples/: bass.py  bass.xmile
mcp-pewter-zero/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  smithery.yaml  tsconfig.json
mcp-pewter-zero/plans/: bass.plan.yaml
mcp-pewter-zero/scripts/: demo.bash
mcp-pewter-zero/src/: loop.ts  server.ts  types.ts
mcp-pewter-zero/tests/: README.md
python/tests/: test_xmile.py
python/worker/: main.py  requirements.txt
scripts/: demo-bass.ts  demo.bash  release.sh
specs/: mcp-http-migration.md
src/: server.ts
src/adapters/: pythonWorker.ts
src/seqthink-kit/: pyproject.toml
src/seqthink-kit/seqthink_kit/: server.py
src/systems-lab/: pyproject.toml
src/systems-lab/systems_lab/: server.py
src/systems-lab/systems_lab/or/: optimize_policy_seq.py  seq_utils.py
src/systems-lab/systems_lab/pack/: export_notebook.py
src/systems-lab/systems_lab/resources/: store.py  uris.py
(+130 files in other folders)
