[project]
name = "systems_lab"
version = "0.1.0"
description = "Consolidated MCP server for AI-native system dynamics and operations research experimentation."
authors = [{name = "Model Enhancement Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11",
    "ortools>=9.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
